# otodom-monitoring

./: .gitignore  Dockerfile  Makefile  README.md  build_docker.sh  crontab.txt  docker-compose.yml  pyproject.toml
db/migrations/: 000001_create_flats.down.sql  000001_create_flats.up.sql  000002_create_seizbil.down.sql  000002_create_seizbil.up.sql  000003_add_url_seizbil.down.sql  000003_add_url_seizbil.up.sql
otodom/: __main__.py  constants.py  fetch.py  filter_parser.py  flat_filter.py  flat_page_parser.py  helpers.py  listing_page_parser.py  models.py  report.py  storage.py  telegram_sync.py  util.py
otodom/cars/: __init__.py  constants.py  model.py  parse.py  report.py  repository.py  search.py
otodom/cars/parsers/: car_searcher.py  najlepszeoferty_bmw.py  stolodataservice.py
otodom/seizbil/: fetcher.py  models.py  parser.py  repository.py
