[tool.poetry]
name = "otodom-monitoring"
version = "0.1.0"
description = ""
authors = ["Sergey Ivanychev <sergeyivanychev@gmail.com>"]
readme = "README.md"
packages = [{include = "otodom_monitoring"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
furl = "^2.1.3"
typing-extensions = "^4.8.0"
pydantic = "^2.4.2"
click = "^8.1.7"
loguru = "^0.7.2"
tenacity = "^8.2.3"
timeago = "^1.0.16"
apscheduler = "~3.10.4"
asgiref = "^3.7.2"
telethon = "^1.30.3"
redis = {extras = ["hiredis"], version = "^5.0.1"}
dacite = "^1.8.1"
cytoolz = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
black = "^23.11.0"
isort = "^5.12.0"
pycln = "^2.3.0"
pyupgrade = "^3.15.0"
ruff = "^0.1.4"
tzlocal = "<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "I",   # isort
    "RUF", # Ruff-specific rules
    "FA", # flake8-future-annotations
    "ISC", # https://beta.ruff.rs/docs/rules/#flake8-implicit-str-concat-isc
    "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PT", # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
    "RSE", # https://beta.ruff.rs/docs/rules/#flake8-raise-rse
    "RET", # https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "SIM", # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "N",  # pep8-naming
    "BLE",  # flake8-blind-except
]
target-version = "py312"
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # use of assert
    "S311",  # use of random
    "S608",  # use of SQL formatting (possible injection)
    "S301",  # use of pickle
    'N812',  #  Lowercase ... imported as non-lowercase ...
    'N817',  #  imported as acronym
    'N806',  #  Variable in function should be lowercase
    'N802',  #  Function name should be lowercase
    'N803',  #  Argument name should be lowercase
    'N815',  #  in class scope should not be mixedCase
    'N814',  #  Camelcase imported as constant `BL`
    # TODO: enable following rules
    "RUF012", # TODO: enable: Mutable class attributes
    "PT011", # pytest.raises is too broad
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.isort]
known-first-party = ["pipelines", "common_utils", "expectations"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py312']
include = '\.py?$'
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
